--- a/src/components/scss/Main.scss
+++ b/src/components/scss/Main.scss
@@ -5,3 +5,16 @@
 .burger-menu:hover .icon-burger {
   display: inline;
 }
+
+@media only screen and (max-width: 414px) {
+  .logo img {
+    height: auto;
+    width: 100px;
+  }
+}
+@media only screen and (min-width: 414px) {
+  .logo img {
+    height: auto;
+    width: 150px;
+  }
+}
