--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,8 @@
   user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Opera and Firefox */
 }
+.min-width {
+  min-width:320px;
+  width: auto !important;
+  width:320px;
+}
