--- a/src/components/scss/Main.scss
+++ b/src/components/scss/Main.scss
@@ -5,6 +5,16 @@
 .burger-menu:active .icon-burger {
   display: inline;
 }
+.header {
+  position: relative;
+}
+.alert {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
 
 @media only screen and (max-width: 414px) {
   .logo img {
