--- a/src/components/scss/Main.scss
+++ b/src/components/scss/Main.scss
@@ -1,3 +1,53 @@
+.container {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+
+  display: -moz-flex;
+  -moz-flex-direction: column;
+  -moz-flex-wrap: nowrap;
+
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+
+  display: -ms-flex;
+  -ms-flex-direction: column;
+  -ms-flex-wrap: nowrap;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.header {
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-top: 1em;
+  -moz-flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+  -ms-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.body {
+  position: relative;
+  -moz-flex-grow: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-grow: 1;
+  flex-grow: 1;
+  overflow: auto;
+  min-height: 2em;
+  padding: 1em;
+}
+
+.footer {
+  padding: 1em;
+  -moz-flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+  -ms-flex-shrink: 0;
+  flex-shrink: 0;
+}
+
 .burger-menu:active .icon-bars,
 .burger-menu .icon-burger {
   display: none;
